Use positive padding for letter-spacing correction

--- a/sass/0-tools/merc-sass/helpers/_letter-spacing.sass
+++ b/sass/0-tools/merc-sass/helpers/_letter-spacing.sass
@@ -1,5 +1,5 @@
 // Letter-Spacing mixin
-// Corrects letter spacing by removing equal margin to the right of text
+// Corrects letter spacing by adding equal padding to the left of text
 @mixin letter-spacing($size)
     letter-spacing: $size
-    margin-right: -$size
+    padding-left: $size
